fix layout issues, fix profile page

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -8,8 +8,15 @@ body {
   width: 100%;
 }
 
+h2, h2, h3, h4, h5, h6 {
+  margin-left: -12px;
+}
+
 
 /* NAV BAR */
+.navbar {
+  margin-top: -10px;
+}
 
 
 /* MAIN TOPICS PAGE */
@@ -26,7 +33,7 @@ body {
   font-size: 30px;
   cursor: pointer;
   padding: 0;
-  margin: 0 15px 0 0;
+  margin: 3px 15px 0 0;
 }
 
 .tally {
@@ -100,8 +107,6 @@ body {
   margin-top:30px;
 }
 
-
-
 .auth-forms {
   max-width:400px;
   margin:0 auto;
@@ -128,4 +133,9 @@ body {
 .cmt .author {
   font-size:11px;
   color:#bbb;
+}
+
+.submissions {
+  margin: 20px;
+  background: #fff;
 }
